--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -33,6 +33,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 90px;
     a{
       display: flex;
       position: absolute;
@@ -100,7 +101,7 @@ label {
       cursor: pointer;
       width: 22px;
       height: 21px;
-      background-image: url("/assets/images/heart/Status=Default.jpg");
+      background-image: url("/assets/images/heart/like.png");
       background-size: contain;
       background-repeat: no-repeat;
   }
@@ -108,7 +109,7 @@ label {
       display: none;
   }
   input:checked ~ .like {
-      background-image: url("/assets/images/heart/Status=Liked.jpg");
+      background-image: url("/assets/images/heart/liked.png");
       animation: opacityFade 1s;
   }
 }
@@ -155,7 +156,8 @@ label {
       
       &:hover .secleft{
       animation: coulissement 330ms forwards;
-    } 
+    
+     } 
    
      &:hover .valide {
         transform:translate(-100%,0); 
