--- a/scss/stylemenu2.css
+++ b/scss/stylemenu2.css
@@ -99,7 +99,7 @@ label .like {
   cursor: pointer;
   width: 22px;
   height: 21px;
-  background-image: url("/assets/images/heart/Status=Default.jpg");
+  background-image: url("/assets/images/heart/like.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -107,7 +107,7 @@ label input {
   display: none;
 }
 label input:checked ~ .like {
-  background-image: url("/assets/images/heart/Status=Liked.jpg");
+  background-image: url("/assets/images/heart/liked.png");
   animation: opacityFade 1s;
 }
 
