--- a/scss/stylemenu1.css
+++ b/scss/stylemenu1.css
@@ -155,7 +155,7 @@ label .like {
   cursor: pointer;
   width: 22px;
   height: 21px;
-  background-image: url("assets/images/heart/like.png");
+  background-image: url(https://lloydfaharon.github.io/ohmyfood/scss/assets/images/heart/like.png);
   background-size: contain;
   background-repeat: no-repeat;
 }
