--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,7 +247,7 @@ h1{
         cursor: pointer;
         width: 22px;
         height: 21px;
-        background-image: url(https://lloydfaharon.github.io/ohmyfood/scss/assets/images/heart/like.png);
+        background-image: url("../assets/images/heart/like.png");
         background-size: contain;
         background-repeat: no-repeat;
     }
@@ -255,7 +255,7 @@ h1{
         display: none;
     }
     input:checked ~ .like {
-        background-image: url("assets/images/heart/liked.png");
+        background-image: url("../assets/images/heart/liked.png");
         animation: opacityFade 2s;
     }
   }
