--- a/scss/stylemenu1.css
+++ b/scss/stylemenu1.css
@@ -155,7 +155,7 @@ label .like {
   cursor: pointer;
   width: 22px;
   height: 21px;
-  background-image: url("../assets/images/heart/like.png");
+  background-image: url("/assets/images/heart/like.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -163,7 +163,7 @@ label input {
   display: none;
 }
 label input:checked ~ .like {
-  background-image: url("../assets/images/heart/liked.png");
+  background-image: url("/assets/images/heart/liked.png");
   animation: opacityFade 1s;
 }
 
