--- a/scss/stylemenu2.scss
+++ b/scss/stylemenu2.scss
@@ -9,6 +9,7 @@
 
    @import "./mixins.scss";
    
+   
   
 
    body{
@@ -106,7 +107,7 @@ label {
       cursor: pointer;
       width: 22px;
       height: 21px;
-      background-image: url("assets/images/heart/like.png");
+      background-image: url("../assets/images/heart/like.png");
       background-size: contain;
       background-repeat: no-repeat;
   }
@@ -114,7 +115,7 @@ label {
       display: none;
   }
   input:checked ~ .like {
-      background-image: url("assets/images/heart/liked.png");
+      background-image: url("../assets/images/heart/liked.png");
       animation: opacityFade 1s;
   }
 }
