--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,11 +22,10 @@
     z-index: 6;
     @include flexMid;
     opacity: 90%;
-    animation: enso 3s forwards;
-   
-    
-    
-    
+    animation: enso  ;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+  
     .loader{
         @include flexMid;
         margin: auto;
@@ -39,6 +38,8 @@
         border-bottom-color: #FF79DA;
         border-radius: 50%;
         animation: chargeur 2S linear infinite;
+        
+       
         
         img{
             width: 100px;
