--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -137,25 +137,23 @@ label {
 }
 .menu-cards{
   margin-bottom: 40px;
-  
-
   .card-solo{
-      width: 319px;
-      height: 42px;
-      align-items: center;
-      background-color: #FFF;
-      border-radius: 15px;
-      display: flex;
-      justify-content: space-between;
-      margin: 15px 0px;
-      padding: 15px;
-      box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
-      position: relative;
-      overflow: hidden;
-      animation: opacityFade 2S;
+    width: 319px;
+    height: 42px;
+    align-items: center;
+    background-color: #FFF;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0px;
+    padding: 15px;
+    box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
+    position: relative;
+    overflow: hidden;
+    animation: opacityFade 2S;
       
       &:hover .secleft{
-      animation: coulissement 330ms forwards;
+      animation: coulissement1 330ms forwards;
     
      } 
    
@@ -172,6 +170,7 @@ label {
     height: 43px;
     width: 300px;
     margin: 0px;
+    @include rona;
    
   
     h2{
@@ -307,6 +306,11 @@ label {
   .menu-cards{
     margin-bottom: 40px;
     .card-solo{
+      &:hover .secleft{
+        animation: coulissement 330ms forwards;
+      
+      } 
+     
       width: 605px;
       .valide{
         left: 635px;
@@ -316,6 +320,8 @@ label {
       }
     }
   }
+  
+  
 
   h1{
     margin-left: 0px;
@@ -346,6 +352,22 @@ label {
   .all-menu{
     max-width: 1055px;
     margin: auto;
+  }
+  @keyframes coulissement {
+    from {
+      width: 300px;
+    } to {
+      width: 290px;
+    }
+  }
+  
+  
+  @keyframes slide {
+    from {
+      left: 262px;
+    } to {
+      left: 222px;
+    }
   }
 
  
