--- a/scss/stylemenu2.css
+++ b/scss/stylemenu2.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 main {
-  height: 1548px;
+  height: 1533px;
 }
 
 header {
@@ -93,21 +93,19 @@ header {
 }
 
 /*--Heart--*/
-label .like {
-  display: block;
+.like {
+  position: relative;
   cursor: pointer;
-  width: 22px;
-  height: 21px;
-  background-image: url("../assets/images/heart/like.png");
-  background-size: contain;
-  background-repeat: no-repeat;
 }
-label input {
-  display: none;
+.like:hover .likedimg {
+  opacity: 1;
+  transition: all 4S;
 }
-label input:checked ~ .like {
-  background-image: url("../assets/images/heart/liked.png");
-  animation: opacityFade 1s;
+
+.likedimg {
+  position: absolute;
+  left: 0px;
+  opacity: 0;
 }
 
 @keyframes opacityFade {
